--- a/config.yml
+++ b/config.yml
@@ -1,4 +1,4 @@
-baseURL: https://www.painedecasa.ro/
+baseURL: http://www.painedecasa.ro/
 title: Paine de casa
 theme: book
 disableKinds: ["taxonomy", "taxonomyTerm"]
@@ -7,6 +7,7 @@ disableKinds: ["taxonomy", "taxonomyTerm"]
 # Book configuration
 disablePathToLower: true
 enableGitInfo: true
+enableEmoji: true
 
 params:
   # (Optional, default true) Show or hide table of contents globally
@@ -19,20 +20,20 @@ params:
 
   # (Optional, default docs) Specify section of content to render as menu
   # You can also set value to "*" to render all sections to menu
-  BookSection: docs
+  # BookSection: docs
 
   # This value is duplicate of $link-color for making active link highlight in menu bundle mode
   # BookMenuBundleActiveLinkColor: \#004ed0
 
   # Include JS scripts in pages. Disabled by default.
   # - Keep side menu on same scroll position during navigation
-  BookEnableJS: true
+  # BookEnableJS: true
 
   # Set source repository location.
   # Used for 'Last Modified' and 'Edit this page' links.
-  BookRepo: https://github.com/alex-shpak/hugo-book
+  # BookRepo: https://github.com/alex-shpak/hugo-book
 
   # Enable "Edit this page" links for 'doc' page type.
   # Disabled by default. Uncomment to enable. Requires 'BookRepo' param.
   # Path must point to 'content' directory of repo.
-  BookEditPath: edit/master/exampleSite/content
+  # BookEditPath: edit/master/exampleSite/content
