--- a/config.yml
+++ b/config.yml
@@ -1,6 +1,7 @@
 baseURL: http://www.painedecasa.ro/
 title: Pâine de casă
 theme: book
+disqusShortname: painedecasa
 disableKinds: ["taxonomy", "taxonomyTerm"]
 # themesDir: ../..
 
